# optional26

./: .clang-format  .cmake-format  .cmake-format.json  .cmake-format.yml  .codespell_ignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .markdownlint.yaml  .markdownlint.yml  .pre-commit-config.yaml  .shellcheckrc  .yamllint  CITATION.cff  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  docker-compose.yml  requirements-dev.in  requirements-dev.txt  targets.mk
.github/: CODEOWNERS
.github/workflows/: ci.yml  ci_lint.yml  ci_tests.yml
cmake/: Config.cmake.in  gcovr.cfg.in
docs/: debug-ci.md
etc/: ci-clang-toolchain.cmake  clang-11-toolchain.cmake  clang-12-toolchain.cmake  clang-13-toolchain.cmake  clang-14-toolchain.cmake  clang-15-toolchain.cmake  clang-16-toolchain.cmake  clang-17-toolchain.cmake  clang-18-toolchain.cmake  clang-19-toolchain.cmake  clang-20-toolchain.cmake  clang-flags.cmake  gcc-10-toolchain.cmake  gcc-11-toolchain.cmake  gcc-12-toolchain.cmake  gcc-13-toolchain.cmake  gcc-14-toolchain.cmake  gcc-15-toolchain.cmake  gcc-flags.cmake  gcc-toolchain.cmake  llvm-16-toolchain.cmake  llvm-master-toolchain.cmake  llvm-toolchain.cmake  toolchain.cmake
examples/: CMakeLists.txt  README.md  concept_checks.cpp  optional_ref.cpp  pythagorean_triples.cpp  range_loop.cpp  sample.cpp  std_vs_beman.cpp
include/Beman/Optional26/: optional.hpp
include/Beman/Optional26/detail/: __iterator.hpp  iterator.hpp
include/Beman/Optional26/detail/stl_interfaces/: config.hpp  fwd.hpp  iterator_interface.hpp
include/beman/optional26/: CMakeLists.txt  optional.hpp
include/beman/optional26/detail/: iterator.hpp
include/beman/optional26/detail/stl_interfaces/: config.hpp  fwd.hpp  iterator_interface.hpp
papers/: .clang-format  Makefile  homework-tokyo.html  homework-tokyo.org  mybiblio.bib  optional-ref.md  optional_ref.h  optional_ref.tex  optional_ref_wording.tex  wg21.bib
papers/P2988/: .gitignore  Makefile  README.md  abstract.bst  base-optional.tex  base.tex  common.tex  design.org  latexmkrc  mybiblio.bib  new-optional.tex  new.tex  optional.hpp  optional_ref.h  optional_ref_wording.tex  std.tex  stdsem
papers/P2988/presentation/: optional_ref.md
papers/P2988/stdtex/: config.tex  paper_macros.tex  styles.tex
papers/stdtex/: paper_macros.tex
presentation/: optional_ref.md
scripts/: README.md  install-packages.sh  install_run_precommit.sh  lint-all.sh  lint.sh  run-tests.sh  test-all.sh
src/: CMakeLists.txt
src/Beman/: CMakeLists.txt
src/Beman/Optional26/: CMakeLists.txt  optional.cpp
src/Beman/Optional26/detail/: __iterator.cpp  iterator.cpp
src/Beman/Optional26/tests/: CMakeLists.txt  __utils.h  optional.t.cpp  optional_constexpr.t.cpp  optional_monadic.t.cpp  optional_range_support.t.cpp  optional_ref.t.cpp  optional_ref_monadic.t.cpp  optional_refref.t.cpp  optional_refref_monadic.t.cpp  test_constuct_fail.cpp  test_types.cpp  test_types.hpp
src/Beman/Optional26/tests/detail/: __iterator.t.cpp  iterator.t.cpp
src/Beman/optional/: CMakeLists.txt
src/Beman/optional/tests/: optional.t.cpp  optional_monadic.t.cpp  optional_range_support.t.cpp
src/beman/optional/: CMakeLists.txt  optional.cpp  optional.hpp  optional.t.cpp  optional_monadic.t.cpp  optional_ref.t.cpp  optional_ref_monadic.t.cpp
src/beman/optional/tests/: optional_range_support.t.cpp  optional_ref.t.cpp
src/beman/optional26/: CMakeLists.txt  optional.cpp
src/beman/optional26/detail/: iterator.cpp
src/beman/optional26/tests/: CMakeLists.txt  optional.t.cpp  optional_constexpr.t.cpp  optional_monadic.t.cpp  optional_range_support.t.cpp  optional_ref.t.cpp  optional_ref_monadic.t.cpp  test_constructor_fail.cpp  test_types.cpp  test_types.hpp  test_utilities.cpp  test_utilities.hpp
src/beman/optional26/tests/detail/: iterator.t.cpp
src/examples/: CMakeLists.txt  before_after.cpp  main.cpp
src/smd/: CMakeLists.txt
src/smd/optional/: CMakeLists.txt  optional.cpp  optional.h  optional.t.cpp  optional_monadic.t.cpp  optional_ref.t.cpp  optional_ref_monadic.t.cpp
